k8s/microservices/common.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aituan
  labels:
    app.kubernetes.io/name: aituan
    app.kubernetes.io/part-of: aituan
